[gd_scene load_steps=4 format=3 uid="uid://d3idyorsfpuux"]

[ext_resource type="Script" path="res://scenes/game_over.gd" id="1_8qu0t"]
[ext_resource type="FontFile" uid="uid://cwxwh6tnieeb3" path="res://Assets/fonts/ZeroCool.ttf" id="1_aut2i"]
[ext_resource type="FontFile" uid="uid://cru7vmbpoyic2" path="res://Assets/fonts/Fortzilla-Regular.ttf" id="2_s20mn"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8qu0t")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GameOverContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -315.0
offset_right = 325.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameOverContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_aut2i")
theme_override_font_sizes/font_size = 116
text = "GAME  OVER"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = 20.0
offset_right = 325.0
offset_bottom = 231.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PlayAgainButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
theme_override_fonts/font = ExtResource("2_s20mn")
theme_override_font_sizes/font_size = 40
text = "PLAY AGAIN"

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s20mn")
theme_override_font_sizes/font_size = 40
text = "   RETURN TO MAIN MENU   "

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../PlayAgainButton")
theme_override_fonts/font = ExtResource("2_s20mn")
theme_override_font_sizes/font_size = 40
text = "EXIT GAME"

[connection signal="pressed" from="VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
